update test case

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "material-table": "^1.57.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "unstated-next": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
